feat: add documentation for handlers
