# cmd/api/users.go
@@ -14,7 +14,20 @@ import(
 type userKey string
 
 const userCtx userKey="user"
-//param->fetch the user from the DB
+
+// GetUser godoc
+//	@Summary		Fetches a user profile
+//	@Description	Fetches a user profile by ID
+//	@Tags			users
+//	@Accept			json
+//	@Produce		json
+//	@Param			userID	path		int	true	"User ID"
+//	@Success		200		{object}	store.User
+//	@Failure		400		{object}	error
+//	@Failure		404		{object}	error
+//	@Failure		500		{object}	error
+//	@Security		ApiKeyAuth
+//	@Router			/users/{userID} [get]
 func (app *application) getUserHandler(w http.ResponseWriter, r *http.Request) {
 	
     user:=getUserFromContext(r)
@@ -26,6 +39,18 @@ func (app *application) getUserHandler(w http.ResponseWriter, r *http.Request) {
 type FollowUser struct{
 	UserID int64 `json:"user_id"`
 }
+// FollowUser godoc
+//	@Summary		Follows a user
+//	@Description	Follows a user by ID
+//	@Tags			users
+//	@Accept			json
+//	@Produce		json
+//	@Param			userID	path		int		true	"User ID"
+//	@Success		204		{string}	string	"User followed"
+//	@Failure		404		{object}	error	"User not found"
+//	@Failure		400		{object}	error	"User Payload missing"
+//	@Security		ApiKeyAuth
+//	@Router			/users/{userID}/follow [put]
 func (app *application) followUserHandler(w http.ResponseWriter, r *http.Request) {
 	followerUser := getUserFromContext(r)
 
